--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "expo": "~47.0.12",
+    "expo": "^1.0.0",
     "expo-status-bar": "~1.4.2",
     "jotai": "^2.0.0",
     "native-base": "^3.4.25",
@@ -20,6 +20,7 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
   "devDependencies": {
