--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.1.6",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
-    "expo": "^1.0.0",
+    "expo": "48.0.0",
     "expo-status-bar": "~1.4.2",
     "jotai": "^2.0.0",
     "native-base": "^3.4.25",
@@ -20,6 +21,8 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9"
   },
